[metadata]
name = elfpy
version = attr: elfpy.__version__
description = Experimental lab fits in Python
url = https://github.com/rc/elfpy
author = Petra Kochova, Robert Cimrman
author_email = cimrman3@ntc.zcu.cz
license = BSD-3-Clause
license_file = LICENSE.txt
long_description = file: README
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Biomechanics
keywords =
    mechanical measurements
    experiment evaluation
    curve fitting

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    soops

[options.entry_points]
console_scripts =
    elfpy-process = elfpy.process:main
    elfpy-convert = elfpy.convert:main
